# DevtoolsPortHook

./: .releaserc  CMakeLists.txt  CMakeUserPresets.json  README.md  vcpkg.json
.github/workflows/: build-windows.yml
docs/: CHANGELOG.md
src/: dummy.cc  main.cc
